--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 @import 'partials/setup';
+@import 'partials/animate.css';
 @import 'partials/abstracts';
 @import 'partials/base';
 @import 'partials/components';
