--- a/styles/partials/_base.scss
+++ b/styles/partials/_base.scss
@@ -1,5 +1,5 @@
 body {
-  background-image: linear-gradient( rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url(../images/felt-background.jpg);
+  background-image: url(../images/felt-background.jpg);
   background-size: cover;
   height: 100vh;
 }
@@ -7,4 +7,5 @@ body {
 .wrapper {
   max-width: 1600px;
   width: 100%;
+  margin: 0 auto;
 } 
