--- a/styles/partials/_home.scss
+++ b/styles/partials/_home.scss
@@ -11,6 +11,10 @@ header img {
   width: 10%;
 }
 
+form {
+  text-align: center;
+}
+
 .playing-area {
   display: flex;
   align-items: flex-start;
