--- a/styles/style.css
+++ b/styles/style.css
@@ -146,7 +146,12 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   clip: rect(0 0 0 0);
   overflow: hidden; }
 
+html {
+  font-size: 125%; }
+
 body {
+  font-family: "Indie Flower", cursive;
+  color: #ff0000;
   background-image: url(../images/felt-background.jpg);
   background-size: cover;
   height: 100vh; }
@@ -170,6 +175,9 @@ header img {
 
 .mimi-face {
   width: 10%; }
+
+form {
+  text-align: center; }
 
 .playing-area {
   display: -webkit-box;
