--- a/styles/partials/_base.scss
+++ b/styles/partials/_base.scss
@@ -12,6 +12,11 @@ body {
 
 .wrapper {
   max-width: 1600px;
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
 } 
+
+h2 {
+  text-align: center;
+  display: block;
+}
