--- a/styles/partials/_home.scss
+++ b/styles/partials/_home.scss
@@ -1,7 +1,7 @@
 //HEADER
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   height: 7.5rem;
 }
@@ -29,9 +29,32 @@ form {
   text-align: center;
 }
 
+//FORM SETUP 
+
 input {
   width: 50%;
   margin: .5rem 0;
+}
+
+input[type=text],
+input[type=number] {
+  color: $primary-color;
+  border: none;
+  border-bottom: .1rem solid orange;
+  background-color: saddlebrown;
+  padding: .75rem 0 .75rem .75rem;
+}
+
+input[type=text]:focus,
+input[type=number]:focus {
+  border: .1rem solid orange;
+}
+
+input::placeholder {
+  // color: ;
+  opacity: 1;
+  // font-family: ;
+  letter-spacing: .1rem;
 }
 
 input[type=number] {
@@ -58,12 +81,17 @@ input[type=number]::-webkit-outer-spin-button {
   width: 20%;
 }
 
-.back {
-  height: 0%;
+.front > h3 {
+  text-align: center;
 }
 
-img {
-  width: 100%;
+.main-image {
+  width: 40%;
+  overflow: hidden;
+}
+
+.back {
+  height: 0%;
 }
 
 //BUTTON/MESSAGE AREA
