--- a/styles/style.css
+++ b/styles/style.css
@@ -133,7 +133,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-.visuallyHidden:not(:focus):not(:active) {
+.visually-hidden:not(:focus):not(:active) {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -165,13 +165,32 @@ h2 {
   text-align: center;
   display: block; }
 
+img {
+  width: 100%;
+  image-orientation: from-image; }
+
+.button {
+  letter-spacing: .095rem;
+  border: 0;
+  background: red;
+  border-radius: 20px;
+  padding: .5rem 1.6rem;
+  -webkit-transition: all .1s;
+  -o-transition: all .1s;
+  transition: all .1s; }
+
+.button:hover {
+  background-color: blue;
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1); }
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -203,6 +222,34 @@ input {
   width: 50%;
   margin: .5rem 0; }
 
+input[type=text],
+input[type=number] {
+  color: #fff;
+  border: none;
+  border-bottom: .1rem solid orange;
+  background-color: saddlebrown;
+  padding: .75rem 0 .75rem .75rem; }
+
+input[type=text]:focus,
+input[type=number]:focus {
+  border: .1rem solid orange; }
+
+input::-webkit-input-placeholder {
+  opacity: 1;
+  letter-spacing: .1rem; }
+
+input:-ms-input-placeholder {
+  opacity: 1;
+  letter-spacing: .1rem; }
+
+input::-ms-input-placeholder {
+  opacity: 1;
+  letter-spacing: .1rem; }
+
+input::placeholder {
+  opacity: 1;
+  letter-spacing: .1rem; }
+
 input[type=number] {
   -moz-appearance: textfield; }
 
@@ -224,11 +271,15 @@ input[type=number]::-webkit-outer-spin-button {
 .card {
   width: 20%; }
 
+.front > h3 {
+  text-align: center; }
+
+.main-image {
+  width: 40%;
+  overflow: hidden; }
+
 .back {
   height: 0%; }
-
-img {
-  width: 100%; }
 
 .button-area {
   height: 7.5rem; }
