--- a/styles/style.css
+++ b/styles/style.css
@@ -282,7 +282,8 @@ input[type=number]::-webkit-outer-spin-button {
   height: 0%; }
 
 .button-area {
-  height: 7.5rem; }
+  height: 7.5rem;
+  text-align: center; }
 
 .text-box > h3 {
   text-align: center;
