--- a/styles/partials/_abstracts.scss
+++ b/styles/partials/_abstracts.scss
@@ -1,3 +1,11 @@
-$primary-color: #fff;
+$primary-color: #258ea6;
+$background-color: #F7F7F7;
+$accent-color: #EE2C2C;
+$secondary-accent: #ECC3BF;
 
-$primary-font: 'Indie Flower', cursive;
+
+$primary-font: 'Source Sans Pro', sans-serif;
+$secondary-font: 'Oxygen', sans-serif;
+
+
+
