updated some styling

--- a/styles/partials/_abstracts.scss
+++ b/styles/partials/_abstracts.scss
@@ -1,7 +1,8 @@
 $primary-color: #258ea6;
 $background-color: #F7F7F7;
 $accent-color: #EE2C2C;
-$secondary-accent: #ECC3BF;
+// $secondary-accent: #ECC3BF;
+$secondary-accent: #CDC9C9;
 
 
 $primary-font: 'Source Sans Pro', sans-serif;
