--- a/styles/style.css
+++ b/styles/style.css
@@ -186,7 +186,7 @@ img {
   transition: all .1s; }
 
 .button:hover {
-  background-color: #ECC3BF;
+  background-color: #CDC9C9;
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
   transform: scale(1.1); }
@@ -244,7 +244,7 @@ input[type=number] {
 
 input[type=text]:focus,
 input[type=number]:focus {
-  border: 0.1rem solid #ECC3BF; }
+  border: 0.1rem solid #CDC9C9; }
 
 input[type=submit] {
   display: block;
