--- a/styles/partials/_home.scss
+++ b/styles/partials/_home.scss
@@ -104,6 +104,7 @@ input[type=number]::-webkit-outer-spin-button {
 .main-image {
   width: 40%;
   overflow: hidden;
+  margin-bottom: 2.5rem;
 }
 
 .main-image img {
