--- a/styles/style.css
+++ b/styles/style.css
@@ -295,7 +295,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 .main-image {
   width: 40%;
-  overflow: hidden; }
+  overflow: hidden;
+  margin-bottom: 2.5rem; }
 
 .main-image img {
   display: inline-block; }
