--- a/styles/partials/_home.scss
+++ b/styles/partials/_home.scss
@@ -109,6 +109,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 .main-image img {
   display: inline-block;
+  object-fit: cover;
+  object-position: 50% 50%
 }
 
 .back {
