--- a/styles/style.css
+++ b/styles/style.css
@@ -162,6 +162,9 @@ body {
   width: 80%;
   margin: 0 auto; }
 
+h1, h2, h3 {
+  margin: 0; }
+
 h1 {
   font-family: "Oxygen", sans-serif;
   color: #EE2C2C;
@@ -299,7 +302,11 @@ input[type=number]::-webkit-outer-spin-button {
   margin-bottom: 2.5rem; }
 
 .main-image img {
-  display: inline-block; }
+  display: inline-block;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 50%;
+  object-position: 50% 50%; }
 
 .back {
   height: 0%; }
