--- a/styles/partials/_abstracts.scss
+++ b/styles/partials/_abstracts.scss
@@ -1,12 +1,36 @@
 $primary-color: #258ea6;
 $background-color: #F7F7F7;
 $accent-color: #EE2C2C;
-// $secondary-accent: #ECC3BF;
 $secondary-accent: #CDC9C9;
-
 
 $primary-font: 'Source Sans Pro', sans-serif;
 $secondary-font: 'Oxygen', sans-serif;
 
+@mixin breakpoint-phone-small {
+    @media (max-width: 400px) { @content };
+}
 
+@mixin breakpoint-phone {
+    @media (max-width: 600px) { @content };
+}
+
+@mixin breakpoint-phone-big {
+    @media (max-width: 700px) { @content };
+}
+
+@mixin breakpoint-tablet-small {
+    @media (max-width: 800px) { @content };
+}
+
+@mixin breakpoint-tablet-port {
+    @media (max-width: 1000px) { @content };
+}
+
+@mixin breakpoint-tablet-land {
+    @media (max-width: 1200px) { @content };
+}
+
+@mixin breakpoint-desktop {
+    @media (max-width: 1600px) { @content };
+}
 
