--- a/styles/partials/_base.scss
+++ b/styles/partials/_base.scss
@@ -15,24 +15,55 @@ body {
   max-width: 1600px;
   width: 80%;
   margin: 0 auto;
+  display: grid;
+  grid-template-rows: 15vh 85vh;
+
+  @include breakpoint-phone-small {
+    width: 90%;
+  }
 } 
 
 h1, h2, h3 {
   margin: 0;
+  text-align: center;
 }
 
 h1 {
   font-family: $secondary-font;
   color: $accent-color;
   font-size: 2.5rem;
+
+  @include breakpoint-tablet-port {
+    font-size: 2rem;
+  }
+
+  @include breakpoint-phone-big {
+    font-size: 1.5rem;
+  }
+
+  @include breakpoint-phone {
+    font-size: 1.25rem;
+  }
 }
 
 h2 {
+
+  @include breakpoint-tablet-port {
+    font-size: 1.25rem;
+  }
+}
+
+h3 {
+
+  @include breakpoint-tablet-port {
+    font-size: 1rem;
+  }
+}
+
+h3 {
   text-align: center;
-  display: block;
 }
 
 img {
   width: 100%;
-  image-orientation: from-image;
 }
