--- a/styles/partials/_home.scss
+++ b/styles/partials/_home.scss
@@ -3,31 +3,43 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 7.5rem;
+  grid-row: 1 / 2;
 }
-
-// header img {
-//   animation: rotate 1s linear infinite;
-// }
 
 .mimi-face {
-  width: 10%;
+  width: 4rem;
+
+  @include breakpoint-tablet-small {
+      width: 3rem;
+  }
 }
 
+//MAIN AREA
 main {
-  height: calc(100vh - 7.5rem);
+  grid-row: 2 / -1;
+  display: grid;
+  // grid-template-rows: 60vh max-content 25vh max-content;
+  grid-template-rows: 65vh max-content 20vh max-content;
+
+  @include breakpoint-tablet-port {
+    grid-template-rows: 50vh max-content 25vh max-content;;
+  }
 }
 
 //NAME/AGE FORM
-
 aside {
   display: flex;
   flex-direction: column;
   justify-content: center;
-
+  grid-column: 1 / -1;
 }
-form {
-  text-align: center;
+
+.aside-image {
+  margin-top: 1rem;
+}
+
+.aside-heading {
+  width: 100%;
 }
 
 aside img {
@@ -35,7 +47,9 @@ aside img {
   margin: 0 auto;
 }
 
-//FORM SETUP 
+form {
+  text-align: center;
+}
 
 input {
   margin: .5rem 0;
@@ -46,6 +60,10 @@ input[type=number] {
   color: $primary-color;
   border: none;
   width: 50%;
+  max-width: 20rem;
+  min-width: 12rem;
+  display: block;
+  margin: .5rem auto;
   border-bottom: .1rem solid $primary-color;
   background-color: $background-color;
   padding: .75rem 0 .75rem .75rem;
@@ -53,20 +71,18 @@ input[type=number] {
   box-shadow: none;
 }
 
-input[type=text]:focus,
-input[type=number]:focus {
-  border: .1rem solid $secondary-accent;
+input:focus {
+  border: .1rem solid $primary-color;
 }
 
 input[type=submit] {
   display: block;
-  margin: .5rem auto;
+  margin: 1rem auto;
 }
 
 input::placeholder {
   font-family: $primary-font;
   letter-spacing: .08rem;
-  
 }
 
 input[type=number] {
@@ -84,33 +100,69 @@ input[type=number]::-webkit-outer-spin-button {
 
 //MAIN PLAYING AREA
 .playing-area {
-  display: flex;
-  justify-content: space-around;
-  height: calc(100vh - 15rem);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 2rem 0;
+  grid-row: 1 / 2;
+
+  @include breakpoint-tablet-small {
+      padding: 1rem 0;
+  }
+
+  @include breakpoint-phone {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0;
+  }
+
+  @include breakpoint-phone-small {
+    padding-top: 1rem;
+  }
 }
 
 .card {
-  width: 20%;
-}
+  width: 80%;
+  max-width: 10rem;
+  margin: 0 auto;
 
-.front > h3 {
-  text-align: center;
+  @include breakpoint-tablet-port {
+    max-width: 8rem;
+  }
 }
 
 .front span {
   color: $accent-color;
 }
 
+.text-box > h3 {
+  text-align: center;
+  align-self: flex-end;
+}
+
 .main-image {
-  width: 40%;
-  overflow: hidden;
   margin-bottom: 2.5rem;
+  grid-column: 2 / 3;
+  display: flex;
+  align-items: start;
+
+  @include breakpoint-desktop {
+    align-items: center;
+  }
+
+  @include breakpoint-phone {
+      display: none;
+  }
+}
+
+.main-image h2 {
+  padding: 7.5rem 2rem 0 2rem;
+
+  @include breakpoint-desktop {
+    padding: 0;
+  }
 }
 
 .main-image img {
   display: inline-block;
-  object-fit: cover;
-  object-position: 50% 50%
 }
 
 .back {
@@ -120,11 +172,12 @@ input[type=number]::-webkit-outer-spin-button {
 //BUTTON/MESSAGE AREA
 
 .button-area {
-  height: 7.5rem;
   text-align: center;
+  grid-column: 1 / -1;
+  grid-row: 2 / 3;
 }
 
-.text-box > h3 {
-  text-align: center;
-  align-self: flex-end;
+.play-again-button,
+.deal-button {
+  margin-top: 0;
 }
