--- a/styles/partials/_abstracts.scss
+++ b/styles/partials/_abstracts.scss
@@ -1,7 +1,7 @@
 $primary-color: #258ea6;
-$background-color: #F7F7F7;
-$accent-color: #EE2C2C;
+$accent-color: #CD2626;
 $secondary-accent: #CDC9C9;
+$tertiary-accent: #0E8C3A;
 
 $primary-font: 'Source Sans Pro', sans-serif;
 $secondary-font: 'Oxygen', sans-serif;
