--- a/styles/partials/_components.scss
+++ b/styles/partials/_components.scss
@@ -3,7 +3,7 @@
 .button {
   letter-spacing: .095rem;
   border: 0;
-  background: $accent-color;
+  background: $tertiary-accent;
   border-radius: 20px;
   padding: .5rem 2.5rem;
   transition: all .1s;
@@ -15,6 +15,4 @@
   transform: scale(1.1); 
 }
 
-.button:focus {
-  border: .1rem solid $primary-color;
-}
+.button:focus { border: .1rem solid $accent-color; }
