--- a/styles/style.css
+++ b/styles/style.css
@@ -153,7 +153,10 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   color: #258ea6;
   letter-spacing: .08rem;
-  background-color: #F7F7F7;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.9))), url(../images/background.jpg);
+  background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url(../images/background.jpg);
+  background-image: -o-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url(../images/background.jpg);
+  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url(../images/background.jpg);
   background-size: cover;
   height: 100vh; }
 
@@ -175,7 +178,7 @@ h1, h2, h3 {
 
 h1 {
   font-family: "Oxygen", sans-serif;
-  color: #EE2C2C;
+  color: #0E8C3A;
   font-size: 2.5rem; }
   @media (max-width: 1000px) {
     h1 {
@@ -195,16 +198,13 @@ h1 {
   h3 {
     font-size: 1rem; } }
 
-h3 {
-  text-align: center; }
-
 img {
   width: 100%; }
 
 .button {
   letter-spacing: .095rem;
   border: 0;
-  background: #EE2C2C;
+  background: #0E8C3A;
   border-radius: 20px;
   padding: .5rem 2.5rem;
   -webkit-transition: all .1s;
@@ -219,7 +219,7 @@ img {
   transform: scale(1.1); }
 
 .button:focus {
-  border: 0.1rem solid #258ea6; }
+  border: 0.1rem solid #CD2626; }
 
 header {
   display: -webkit-box;
@@ -235,7 +235,7 @@ header {
   grid-row: 1 / 2; }
 
 .mimi-face {
-  width: 4rem; }
+  width: 4.5rem; }
   @media (max-width: 800px) {
     .mimi-face {
       width: 3rem; } }
@@ -271,9 +271,6 @@ aside {
 .aside-image {
   margin-top: 1rem; }
 
-.aside-heading {
-  width: 100%; }
-
 aside img {
   width: 20%;
   margin: 0 auto; }
@@ -294,18 +291,18 @@ input[type=number] {
   display: block;
   margin: .5rem auto;
   border-bottom: 0.1rem solid #258ea6;
-  background-color: #F7F7F7;
+  background-color: rgba(0, 0, 0, 0);
   padding: .75rem 0 .75rem .75rem;
   letter-spacing: .08rem;
   -webkit-box-shadow: none;
   box-shadow: none; }
 
-input:focus {
-  border: 0.1rem solid #258ea6; }
-
 input[type=submit] {
   display: block;
   margin: 1rem auto; }
+
+input:focus {
+  border: 0.1rem solid #CD2626; }
 
 input::-webkit-input-placeholder {
   font-family: "Source Sans Pro", sans-serif;
@@ -356,14 +353,14 @@ input[type=number]::-webkit-outer-spin-button {
 
 .card {
   width: 80%;
-  max-width: 10rem;
+  max-width: 12rem;
   margin: 0 auto; }
   @media (max-width: 1000px) {
     .card {
       max-width: 8rem; } }
 
-.front span {
-  color: #EE2C2C; }
+.front h3 {
+  color: #CD2626; }
 
 .text-box > h3 {
   text-align: center;
@@ -396,12 +393,6 @@ input[type=number]::-webkit-outer-spin-button {
     .main-image h2 {
       padding: 0; } }
 
-.main-image img {
-  display: inline-block; }
-
-.back {
-  height: 0%; }
-
 .button-area {
   text-align: center;
   grid-column: 1 / -1;
@@ -412,3 +403,9 @@ input[type=number]::-webkit-outer-spin-button {
 .play-again-button,
 .deal-button {
   margin-top: 0; }
+
+.win {
+  color: #0E8C3A; }
+
+.lose {
+  color: #CD2626; }
