--- a/styles/style.css
+++ b/styles/style.css
@@ -268,13 +268,6 @@ aside {
   justify-content: center;
   grid-column: 1 / -1; }
 
-.aside-image {
-  margin-top: 1rem; }
-
-aside img {
-  width: 20%;
-  margin: 0 auto; }
-
 form {
   text-align: center; }
 
@@ -329,6 +322,9 @@ input[type=number]::-webkit-outer-spin-button {
   -moz-appearance: none;
   appearance: none;
   margin: 0; }
+
+.aside-message {
+  color: #CD2626; }
 
 .playing-area {
   display: -ms-grid;
