--- a/styles/partials/_home.scss
+++ b/styles/partials/_home.scss
@@ -121,6 +121,10 @@ input[type=number]::-webkit-outer-spin-button {
   @include breakpoint-phone { display: none; }
 }
 
+.main-image img {
+  border-radius: 50%;
+}
+
 .main-image h2 {
   padding: 7.5rem 2rem 0 2rem;
 
