--- a/styles/style.css
+++ b/styles/style.css
@@ -386,6 +386,9 @@ input[type=number]::-webkit-outer-spin-button {
     .main-image {
       display: none; } }
 
+.main-image img {
+  border-radius: 50%; }
+
 .main-image h2 {
   padding: 7.5rem 2rem 0 2rem; }
   @media (max-width: 1600px) {
